# RAG_SERVICE

./: .env.example  .gitignore  README.md  custom_types.py  dataloader.py  main.py  pyproject.toml  vector_db.py
static/: app.js  bg.js  index.html  styles.css
